2.6.2 - 2013-04-22

	General:
		Fixed audio sync when muxing DTS via FFmpeg
		Improved descriptions in GUI
		Added support for the file:// protocol in WEB.conf
		Protocols are matched before extensions in WEB.conf
	External Components:
		Updated Java Runtime Environment automatic downloader for Windows to 7u21, which:
			Has lots of security fixes and improvements 

2.6.1 - 2013-04-16

	General:
		Added option to toggle H.264 remuxing in FFmpeg
		Improved stability of Live Subtitles
		Re-enabled WMP detection
		Speed improvements
		Fixed transcoding to Xbox via FFmpeg
		Added support for WTV files
		A-to-Z virtual folders support sorting options
		Fixed a crash with rare MP3 files
		Allow subtitles to be disabled on Samsung TVs
	Renderers:
		Improved Sony Blu-ray Player support (thanks, skeptical!)
		Fixed exception on Android
		Fixed stuttering issues with Bravia HX TVs
	Languages:
		Updated Dutch translation (thanks, leroy!)
		Updated Italian language (thanks, nocciola82!)
	External Components:
		Updated FFmpeg for Linux to burek's 2013-04-04 build, which:
			Is compiled statically

2.6.0 - 2013-03-29

	General:
		Added "Live Subtitles" which means you can select subtitles from the Internet via your device. It can be enable on the Navigation/Share Settings page.
		Improved layout of the Navigation/Share Settings page
		Implemented default subtitle preferences, to use them:
			Either use the "Clean Install" option on Windows or put "eng,off;*,eng;*,und" into the "Audio/subtitles language priority" box in the "Subtitles settings" tab on the Transcoding Settings page
		Fixed DTS muxing with FFmpeg
		Added new "precoder" functionality, useful for plugin developers
		Added h.264 encoding support to MEncoder (when renderers specify it)
	Languages:
		Updated Czech translation
		Updated English settings labels
		Updated Simplified Chinese translation (thanks, lovenemesis!)
	External Components:
		Updated h2 database to 1.3.171, which:
			Increases speed