@@ -147,6 +147,8 @@ public class NetworkConfiguration {
 	 * {@link #getInstance()} to retrieve an instance.
 	 */
 	private NetworkConfiguration(Enumeration<NetworkInterface> networkInterfaces) {
+		System.setProperty("java.net.preferIPv4Stack", "true");
+
 		checkNetworkInterface(networkInterfaces, null);
 	}
 
