@@ -175,28 +175,32 @@ public class UPNPHelper {
 	 * @throws IOException Signals that an I/O exception has occurred.
 	 */
 	private static MulticastSocket getNewMulticastSocket() throws IOException {
-		MulticastSocket ssdpSocket = new MulticastSocket();
-		ssdpSocket.setReuseAddress(true);
-		NetworkInterface ni = NetworkConfiguration.getInstance().getNetworkInterfaceByServerName();
+		NetworkInterface networkInterface = NetworkConfiguration.getInstance().getNetworkInterfaceByServerName();
 
-		if (ni != null) {
-			ssdpSocket.setNetworkInterface(ni);
-
-			// force IPv4 address
-			Enumeration<InetAddress> enm = ni.getInetAddresses();
-
-			while (enm.hasMoreElements()) {
-				InetAddress ia = enm.nextElement();
-
-				if (!(ia instanceof Inet6Address)) {
-					ssdpSocket.setInterface(ia);
-					break;
-				}
-			}
-		} else if (PMS.get().getServer().getNetworkInterface() != null) {
-			LOGGER.trace("Setting multicast network interface: " + PMS.get().getServer().getNetworkInterface());
-			ssdpSocket.setNetworkInterface(PMS.get().getServer().getNetworkInterface());
+		if (networkInterface == null) {
+			networkInterface = PMS.get().getServer().getNetworkInterface();
 		}
+
+		if (networkInterface == null) {
+			throw new IOException("No usable network interface found for UPnP multicast");
+		}
+
+		List<InetAddress> usableAddresses = new ArrayList<>();
+		List<InetAddress> networkInterfaceAddresses = Collections.list(networkInterface.getInetAddresses());
+
+		for (InetAddress inetAddress : networkInterfaceAddresses) {
+			if (inetAddress != null && inetAddress instanceof Inet4Address && !inetAddress.isLoopbackAddress()) {
+				usableAddresses.add(inetAddress);
+			}
+		}
+
+		if (usableAddresses.isEmpty()) {
+			throw new IOException("No usable addresses found for UPnP multicast");
+		}
+
+		InetSocketAddress localAddress = new InetSocketAddress(usableAddresses.get(0), 0);
+		MulticastSocket ssdpSocket = new MulticastSocket(localAddress);
+		ssdpSocket.setReuseAddress(true);
 
 		LOGGER.trace("Sending message from multicast socket on network interface: " + ssdpSocket.getNetworkInterface());
 		LOGGER.trace("Multicast socket is on interface: " + ssdpSocket.getInterface());
@@ -328,15 +332,6 @@ public class UPNPHelper {
 
 						if (bindErrorReported) {
 							LOGGER.warn("Finally, acquiring port " + configuration.getUpnpPort() + " was successful!");
-						}
-
-						NetworkInterface ni = NetworkConfiguration.getInstance().getNetworkInterfaceByServerName();
-
-						if (ni != null) {
-							multicastSocket.setNetworkInterface(ni);
-						} else if (PMS.get().getServer().getNetworkInterface() != null) {
-							LOGGER.trace("Setting multicast network interface: " + PMS.get().getServer().getNetworkInterface());
-							multicastSocket.setNetworkInterface(PMS.get().getServer().getNetworkInterface());
 						}
 
 						multicastSocket.setTimeToLive(4);
@@ -476,6 +471,6 @@ public class UPNPHelper {
 	 * @throws IOException Signals that an I/O exception has occurred.
 	 */
 	private static InetAddress getUPNPAddress() throws IOException {
-		return InetAddress.getByAddress(IPV4_UPNP_HOST, new byte[]{(byte) 239, (byte) 255, (byte) 255, (byte) 250});
+		return InetAddress.getByName(IPV4_UPNP_HOST);
 	}
 }
